# aot-headless-client

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
aotbot/: __init__.py  bitstream.py  client.py  config.py  crc.py  datablocks.py  events.py  ghosts.py  logging_setup.py  main.py  masterserver.py  netconn.py  nodered.py  phases.py  playerlist.py  protocol_constants.py  repl.py  telemetry.py  transport.py  websocket.py
docs/: event-system.md  getstringcrc.md  handshake.md  mission-phases.md  nodered-protocol.md  protocol-constants.md  re-deep-findings.md  websocket-protocol.md
tests/: test_bitstream.py  test_capture_replay.py  test_client.py  test_config.py  test_crc.py  test_datablocks.py  test_events.py  test_ghosts.py  test_masterserver.py  test_netconn.py  test_nodered.py  test_phases.py  test_playerlist.py  test_repl.py  test_telemetry.py  test_transport.py  test_websocket.py
tools/: ack_coverage.py  ack_diff.py  check_datablocks.py  cpoint_trace.gdb  decode_c2s_body.py  decode_c2s_events.py  decode_capture.py  disasm.py  find_bad_datablocks.py  find_desync.py  fxshape_trace.gdb  in_container_trace.sh  live_badlogin_test.py  live_capture_self.py  live_chat_test.py  live_objects_test.py  replay_s2c.py  replay_s2c_audit.py  trace_capture_pkt.py  trace_ghost_pkt.py  udp_relay.py
tools/captures/: ANALYSIS.md  bad_login.jsonl  bot_session.jsonl  bot_session_213stall.jsonl  bot_session_postfix.jsonl  live_rain_freshacct.jsonl  live_session_dbg.jsonl  (+2 more)
